<resources>
    <string name="app_name">Sentimo</string>
    <string name="warning_CMFNullMoodError">No emotion selected</string>
    <string name="warning_CMFTimeParseError">Invalid date or time.</string>
    <string name="warning_CMFReasonTooLongError">Reason longer than 20 characters.</string>
    <string name="warning_CMFReasonTooManyWordsError">Reason more than 3 words.</string>
    <string name="warning_LoginPasswordTooShortError">Password too short. Must be at least 6 characters.</string>
    <string name="warning_LoginUsernameTooShortError">Username too short. Must be at least 6 characters.</string>
    <string name="warning_CMFPictureAndReasonError">Text reason and picture reason provided. Only one or the other is
        allowed.
    </string>
    <string name="warning_CMFNoLocationPermission">Location permission required.</string>
    <string name="warning_CMFNoCameraPermission">No camera permission.</string>
    <string name="warning_CMFPhotoReturnError">Error getting photo, please try again.</string>
    <string name="warning_ImageDisplayError">Error displaying image, please try again.</string>
    <string name="title_activity_display_map">Map</string>
    <string name="no_situation_text">(Optional)</string>
    <string name="friend_map">Friend Map</string>
    <string name="my_map">My Map</string>
    <string name="delete_yes">YES</string>
    <string name="delete_no">NO</string>
    <string name="take_picture_option">Take Picture</string>
    <string name="select_picture_gallery_option">Select picture from Gallery</string>
    <string name="use_online_picture_option">Use pre-existing online picture.</string>
    <string name="no_picture_option">No picture.</string>
    <string name="friend_mood_display_fragment_positive_text">delete</string>
    <string name="warning_InvalidEmail">Invalid Email</string>
</resources>
