<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingBottom="10dp"
    tools:context="com.example.sentimo.MainActivity"
    android:background="@drawable/image00"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewSignUpScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="Sentimo Sign-Up"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#E95384"
            android:textSize="70dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="top|center_horizontal"
            android:text="Celebrate your Sentiments with Sentimo"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1A1B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Email_SP_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#6D9C27B0"
            android:fontFamily="casual"
            android:gravity="left"
            android:hint="Email"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Username_SP_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#799C27B0"
            android:fontFamily="casual"
            android:gravity="left"
            android:hint="UserName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Password_SP_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#809C27B0"
            android:fontFamily="casual"
            android:gravity="left"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_signup_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonstyleselector"
            android:fontFamily="casual"
            android:text="Sign-Up"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>

